<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/main_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/v2ex"
        android:textSize="14pt"
        android:textStyle="bold"
        />

    <ImageView
        android:id="@+id/main_line_1"
        android:layout_below="@id/main_title"
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:background="#000"
        />

    <ImageButton
        android:id="@+id/main_button_search"
        android:layout_below="@id/main_line_1"
        android:layout_alignParentRight="true"
        android:layout_width="64dp"
        android:layout_height="64dp"
        android:layout_margin="8dp"
        android:scaleType="fitXY"
        android:padding="8dp"
        android:src="@drawable/ic_search"
        android:background="#00000000"
        />

    <EditText
        android:id="@+id/main_edit_search"
        android:layout_below="@id/main_line_1"
        android:layout_toLeftOf="@id/main_button_search"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/hint_search"
        android:singleLine="true"
        />

    <RadioGroup
        android:id="@+id/main_radiogroup"
        android:layout_below="@id/main_edit_search"
        android:layout_toLeftOf="@id/main_button_search"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <RadioButton
            android:id="@+id/main_searchby_username"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="true"
            android:text="@string/radio_username"/>

        <RadioButton
            android:id="@+id/main_searchby_id"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/radio_id"/>
        </RadioGroup>

    <ImageView
        android:id="@+id/main_line_2"
        android:layout_below="@id/main_radiogroup"
        android:layout_width="match_parent"
        android:layout_marginTop="8dp"
        android:layout_height="2dp"
        android:background="#000000"/>

    <ListView
        android:id="@+id/main_list"
        android:layout_below="@id/main_line_2"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        </ListView>



</RelativeLayout>
